feat: support direct phone and username sends
